--- a/views/delivery.hbs
+++ b/views/delivery.hbs
@@ -1,11 +1,28 @@
 <div class="delivery">
       <h1 class="center-align">Информация о доставке и условиях!</h1>
-       <div class="d">
-        <img class="center-align" src="/delivery.jpg">
+       <div class="center imgDelivery">
+        <img src="/delivery.jpg">
       </div>
-      <div class="collapsible-header">
-      <i class="material-icons">filter_drama</i>
-      First
-      <span class="new badge">4</span></div>
-    <div class="collapsible-body"><p>Lorem ipsum dolor sit amet.</p></div>
-</div>        
+      <div class="show z-depth-3" data-toggle-id="showId">
+        <i class="large material-icons">arrow_drop_down</i>
+        <p class="valign-wrapper">Доставка по Минску и району</p>
+      </div>
+      <div class="container" id="showId" hidden>
+        <div class="row">
+          <p>ВНИМАНИЕ!!! Доставка осуществляется день в день после 18.00 
+            (При наличии интересующего вас товара на складе). <br>Работаем без выходных.</p>
+          <p>Заказы на сумму до 10 руб. не доставляются.</p>
+          <p>Доставка по Фрунзенскому району, а также в пос. Ждановичи, 
+            Ратомка, Каменная Горка и Ратомка будет осуществляться по следующим условиям:</p>
+            <ol>
+              <li>от 30 рублей заказы доставляются - <span class="redt">БЕСПЛАТНО.</span></li>
+              <li>10 до 30 доставка заказа - 2 руб</li>
+            </ol>
+            <p>Карта доставки нашими курьерами:</p>
+            <div class="center">
+              <img src="http://alex-zoo.by/assets/images/service/map-delivery.png">  
+            </div>
+
+        </div>
+      </div> 
+</div>     
