--- a/views/contacts.hbs
+++ b/views/contacts.hbs
@@ -2,10 +2,10 @@
       <h1 class="center-align">Пункты самовывоза</h1>
       {{#if contact.length}}
       {{#each contact}}
-      <div class="row">
-        <div class="col s3 m3">
-          <div class="card blue-grey darken-1">
-            <div class="card-content white-text">
+      <div class="row clbm">
+        <div class="col s3 m3 ">
+          <div class="card blue-grey darken-1 ">
+            <div class="card-content white-text clb">
               <span class="card-title">{{city}}</span>
               <p>{{address}}</p>
             </div>
