--- a/views/index.hbs
+++ b/views/index.hbs
@@ -5,7 +5,7 @@
     <div class="section white #512da8 deep-purple darken-2">
       <div class="row container">
         <h2 class="header white-text">Мы знаем, что хочет ваш питомец!</h2>
-        <p class="white-text">Уникальный магазин по подбору товаров для ваших друзей</p>
+        <p class="white-text header">Уникальный магазин по подбору товаров для ваших друзей</p>
       </div>
     </div>
     <div class="parallax-container">
