--- a/public/index.css
+++ b/public/index.css
@@ -45,5 +45,42 @@ body {
 }
 
 .header:hover {
-    font-size: 12px;
+    font-style: italic;
+}
+
+.header:before, .header:after { 
+    content: "\2746"; 
+    display: inline-block; 
+    font-size: 60px; 
+    color: #38afaa; 
+    -webkit-animation: my 4s infinite alternate; 
+    animation: my 4s infinite alternate; 
+}
+
+.header:before { 
+    margin-right: 0.5em; 
+}
+
+.header:after { 
+    margin-left: 0.5em; 
+}
+
+@-webkit-keyframes my {
+        0%   {color: #2e2f92;}
+        25%  {color: #38afaa;}
+        50%  {color: #5b59a7;}
+        75%  {color: #f7b21c;}
+        100% {color: #e12527;}
+}
+
+@keyframes my {
+        0%   {color: #2e2f92;}
+        25%  {color: #38afaa;}
+        50%  {color: #5b59a7;}
+        75%  {color: #f7b21c;}
+        100% {color: #e12527;}
+}
+
+.header {
+    font-family: 'Niconne', cursive; 
 }
